--- a/webapp/index.html
+++ b/webapp/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta charset="utf-8">
-		<title>openSAP - Developing Web Apps with SAPUI5</title>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+		<meta charset="UTF-8">
+		<title>openSAP - Developing Web Apps with SAPUI5 v3</title>
 
 		<script
 			id="sap-ui-bootstrap"
@@ -11,16 +11,20 @@
 			data-sap-ui-theme="sap_bluecrystal"
 			data-sap-ui-libs="sap.m"
 			data-sap-ui-compatVersion="edge"
-			data-sap-ui-preload="async">
+			data-sap-ui-preload="async"
+			data-sap-ui-resourceroots='{"opensap.myapp" : "./"}'>
 		</script>
 
 
 		<script>
 			sap.ui.getCore().attachInit(function () {
-				alert("SAPUI5 is ready");
+				sap.ui.xmlview({
+					viewName : "opensap.myapp.view.App"
+				}).placeAt("content");
 			});
 		</script>
 	</head>
 	<body class="sapUiBody" id="content">
 	</body>
-</html> 
+
+</html>
